@@ -30,6 +30,7 @@ $ -> Language fix or change
  # [#30571] * Strict Standards: Declaration of ContentModelCategories::populateState() should be compatible with JModel::populateState() 
  # [#30103] Cannot delete web site entry for a contact. Thanks Elin Waring
  # [#30748] *Multilanguage issue with contacts. Thanks Benjamin Trenkle
+ # [#30672] Category blog: COM_CONTENT_NO_ARTICLES message is missing. Thanks Charles Perk.
  
 30-Apr-2013 Jean-Marie Simonet
  # [#29922] Browser Agent Google Chrome on IOS. Thanks Georges Wilson.
